fix overflow on very long words

--- a/src/styles/pages/forums/thread.scss
+++ b/src/styles/pages/forums/thread.scss
@@ -132,7 +132,7 @@
                         padding: 6px 0;
                         padding-left: 20px;
                         padding-right: 6px;
-        
+
                         &-left {
                             display: flex;
                             flex-direction: row;
@@ -140,26 +140,26 @@
                             font-size: 12px;
                             color: hsl(var(--base-hue), 15%, 40%);
                         }
-        
+
                         &-right {
                             display: flex;
                             flex-direction: row;
                             gap: 8px;
                             justify-content: flex-end;
-        
+
                             button {
                                 font: inherit;
                                 font-size: 14px;
                                 cursor: pointer;
                             }
-        
+
                             &-post {
                                 border: none;
                                 background-color: var(--hsl-l6);
                                 padding: 4px 16px;
                                 border-radius: var(--corner-radius);
                                 color: var(--hsl-l1);
-        
+
                                 &:hover {
                                     background-color: var(--hsl-l5);
                                 }
@@ -321,8 +321,18 @@
 
             &-body {
                 flex: 1;
+                overflow-wrap: break-word;
                 word-wrap: break-word;
-                white-space: pre-wrap;
+
+                -ms-word-break: break-all;
+                word-break: break-word;
+
+                -ms-hyphens: auto;
+                -moz-hyphens: auto;
+                -webkit-hyphens: auto;
+                hyphens: auto;
+                
+                white-space: break-spaces;
             }
 
             &-textbox {
